Day-26-Kubernetes-Basics/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: day26-platform
  labels:
    app.kubernetes.io/name: day26-platform
    app.kubernetes.io/part-of: communication-protocols-series
