Day-26-Kubernetes-Basics/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day26-platform
  namespace: day26-platform
  labels:
    app: day26-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: day26-platform
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: day26-platform
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8091"
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: day26-platform
          image: day26-device-monitoring:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8091
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8091
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8091
            initialDelaySeconds: 40
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8091
            failureThreshold: 12
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
