Day-26-Kubernetes-Basics/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day26-mysql
  namespace: day26-platform
spec:
  selector:
    app: day26-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: day26-platform-service
  namespace: day26-platform
spec:
  type: NodePort
  selector:
    app: day26-platform
  ports:
    - name: http
      port: 8091
      targetPort: 8091
      nodePort: 30091
