Day-26-Kubernetes-Basics/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: day26-platform-ingress
  namespace: day26-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: day26.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: day26-platform-service
                port:
                  number: 8091
